# scop

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  scop.code-workspace
SFML-2.5.1-macos-clang/: CMakeLists.txt
dependencies/SFML-2.5.1/: CMakeLists.txt
include/: GL  SFML  camera.hpp  error_handling.hpp  index_buffer.hpp  mesh.hpp  quaternion.hpp  renderer.hpp  scop.hpp  shader.hpp  stb_image.hpp  texture.hpp  vector.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
resources/shaders/: basic.frag  basic.glsl  basic.shader  basic.vert  basic_es.glsl  basic_es.shader
src/: camera.cpp  error_handling.cpp  index_buffer.cpp  main.cpp  mesh.cpp  renderer.cpp  shader.cpp  stb_image.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
temp/: CMakeLists.txt
